another overflow fixing

--- a/style.css
+++ b/style.css
@@ -4,11 +4,14 @@
     box-sizing: border-box;
 }
 
+html, body {
+    position: relative;
+    overflow-x: hidden;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 body::-webkit-scrollbar {
     display: none;
-    position: relative;
-    overflow-x: hidden;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
